Working version
----------------

(Changes that can break existing programs are marked with a "*")

### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

### Other libraries:

- #14020: Add Unix.unsetenv.
  (Nicolás Ojeda Bär, review by Antonin Décimo and David Allsopp)

### Tools:

* #13638: ocamlmklib exits with code 4 if passed an unrecognised option, as it
  does with an unrecognised file.
  (David Allsopp, review by Antonin Décimo and Sébastien Hinderer)

- #13966: Enable "generalized polymorphic #install_printer"
  in the debugger
  (Pierre Boutillier and Gabriel Scherer, review by Florian Angeletti)

### Manual and documentation:

* #13975: documented the `[@remove_aliases]` built-in attribute for signatures
  (introduced by #1652 in 2018). Small refactor of the code that fetches the
  attribute.
  (Clement Blaudeau, review by Gabriel Scherer)

- #14002: Add anchors to items and headings of the web version of the API
  documentation for easier linking.
  (Nicolás Ojeda Bär, report by Louis Roché, review by Gabriel Scherer and
  Florian Angeletti)

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

- #13839, #14008: Reimplement `let open`, `let module` and `let exception` in
  terms of a single construct.
  (Nicolás Ojeda Bär, review by Gabriel Scherer, Samuel Vivien, Ulysse Gérard
  and Vincent Laviron)

- #13911: Refactor the merging of signature constraints, by splitting the
  monolithic merge function into separate, specialized functions (for merging
  types, modules and module types) - sharing only the recursive part for
  handling deep constraints.
  (Clement Blaudeau, review by Florian Angeletti and Samuel Vivien)

### Build system:

### Bug fixes:


OCaml 5.4.0
---------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- #13340: Array literal syntax can now be used to denote values of type `'a