@@ -11,6 +11,10 @@ Working version
 
 ### Standard library:
 
+- #13916: Add Option.product and Option.Syntax.
+  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer and David
+  Allsopp)
+
 ### Other libraries:
 
 - #14020: Add Unix.unsetenv.
